// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountInput/> render() should render with currency symbol on left 1`] = `
<div
  className="container"
>
  <span
    className="leftLabel"
    style={
      Object {
        "width": "2rem",
      }
    }
  >
    $
  </span>
  <Input
    className="input"
    disabled={false}
    id="amount"
    innerRef={[Function]}
    max={null}
    min={0}
    onBlur={[Function]}
    onChange={[Function]}
    required={true}
    step={0.01}
    style={
      Object {
        "paddingLeft": "2rem",
      }
    }
    type="number"
    value="9.99"
  />
</div>
`;

exports[`<AmountInput/> render() should render with percentage symbol on right 1`] = `
<div
  className="container"
>
  <Input
    className="input"
    disabled={false}
    id="amount"
    innerRef={[Function]}
    max={100}
    min={0}
    onBlur={[Function]}
    onChange={[Function]}
    required={true}
    step={0.01}
    style={
      Object {
        "paddingRight": "2rem",
      }
    }
    type="number"
    value="25"
  />
  <span
    className="rightLabel"
    style={
      Object {
        "width": "2rem",
      }
    }
  >
    %
  </span>
</div>
`;
